
  [ Justin B Rye ]
  * Make pulseaudio-utils suggest pulseaudio

  [ Luca Capello ]
  * Explain how to set up PulseAudio in a chroot (Closes: #649884)

  [ Balint Reczey ]
  * Imported Upstream version 5.0
  * Make PA init script start PA unconditionally upon restart (Closes: #738143)
  * Recommend consolekit instead of depending on it (Closes: #611491)
  * Fix typo in debian/control

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 28 Mar 2014 21:11:21 +0100

pulseaudio (4.0-6) unstable; urgency=low

  * debian/patches/build-make-ARM-NEON-check-in-configure.ac-more-stric.patch
    + Added. Be more strict about the neon compiler flag ordering, fixes FBTS
      on ARM (Closes: #717444) (From upstream git)

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 28 Mar 2014 21:09:12 +0100

pulseaudio (4.0-5) unstable; urgency=low

  * Add lintian overrides for rpaths in the modules to private pulseaudio
    library directories

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 19 Jul 2013 22:10:10 +0200

pulseaudio (4.0-4) unstable; urgency=low

  * debian/shlibs.local: Update to new soname versions
    (Closes: #714381, #712919)
  * debian/rules: svolume moved to libpulse-common, adjust accordingly to fix
    build on armel

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 14 Jul 2013 15:09:04 +0200

pulseaudio (4.0-3) unstable; urgency=low

  * Fix build on arm

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 16 Jun 2013 22:36:43 +0200

pulseaudio (4.0-2) unstable; urgency=low

  * Only b-d on libsbc-dev on linux, it's only used when bluetooth support is
    enabled which is linux only (Closes: #710029)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 16 Jun 2013 19:29:28 +0200

pulseaudio (4.0-1) unstable; urgency=low

  [ Luke Yelavich ]
  * Pulseaudio should depend on the binary version of libpulse0
    (Closes: #700693)

  [ Sjoerd Simons ]
  * Acknowledge 2.0-6.1 NMU (Closes: #705435)
    - debian/patches/kfreebsd_no_lock_and_threads_synchro.patch